2010-10-25  Alan Modra  <amodra@gmail.com>

	PR gas/12049
	* write.c (relax_frag): Don't allow forward branches to temporarily
	becomde backward branches.

2010-10-23  Mark Mitchell  <mark@codesourcery.com>

	* config/obj-elf.c (elf_adjust_symtab): New.  Move group section
	processing here from elf_frob_file.  Ensure that group signature
	symbols have the name of the group.
	(elf_frob_file): Move group section processing to
	elf_adjust_symtab.
	* config/obj-elf.h (elf_adjust_symtab): Declare.
	(obj_adjust_symtab): Define.
	* config/tc-arm.c (arm_adjust_symtab): Call elf_adjust_symtab.

2010-10-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/tc-sparc.h [TE_SOLARIS] (ELF_TARGET_FORMAT): Define as
	elf32-sparc-sol2.
	(ELF64_TARGET_FORMAT): Define as elf64-sparc-sol2.

2010-10-21  Joseph Myers  <joseph@codesourcery.com>

	* config/tc-tic6x.c (tic6x_arch_attribute, tic6x_arches,
	md_assemble, tic6x_set_attributes): Update for attribute renaming.
	* doc/c-tic6x.texi: Update for attribute renaming.

2010-10-19  Alan Modra  <amodra@gmail.com>

	* write.c (relax_segment): Correct address on frag added to stop
	leb128/align frags bouncing.

2010-10-19  Alan Modra  <amodra@gmail.com>

	PR gas/12049
	* frags.h (struct frag): Add "region" field.
	* write.c (relax_frag): Don't add "stretch" to forward reference
	target if there is an intervening org or align.
	(relax_segment): Set region.

2010-10-18  Maciej W. Rozycki  <macro@linux-mips.org>

	* config/tc-mips.c (macro)[ldd_std]: Fix the relaxation variant
	for absolute addressing.

2010-10-18  Maciej W. Rozycki  <macro@linux-mips.org>

	* config/tc-mips.c (macro)[M_LD_OB, M_SD_OB]: Handle 64-bit ABIs.

2010-10-18  Maciej W. Rozycki  <macro@linux-mips.org>

	* config/tc-mips.c (mips_pseudo_table): Add "sbss".
	(s_change_sec): Handle it.

2010-10-15  Mike Frysinger  <vapier@gentoo.org>

	* config/bfin-parse.y (BYTEOP2M): Call BYTEOP2M().

2010-10-14  H.J. Lu  <hongjiu.lu@intel.com>
