@@ -1,6 +1,6 @@
 /* ECOFF object file format.
    Copyright 1993, 1994, 1995, 1996, 1998, 1999, 2000, 2001, 2002,
-   2005, 2007, 2009  Free Software Foundation, Inc.
+   2005, 2007, 2009, 2010  Free Software Foundation, Inc.
    Contributed by Cygnus Support.
    This file was put together by Ian Lance Taylor <ian@cygnus.com>.
 
@@ -315,5 +315,6 @@ const struct format_ops ecoff_format_ops =
   ecoff_set_ext,
   ecoff_read_begin_hook,
   ecoff_symbol_new_hook,
-  ecoff_symbol_clone_hook
+  ecoff_symbol_clone_hook,
+  0	/* adjust_symtab.  */
 };
